find-pubmed-ids-by-pairs